--- a/app/Resources/views/delegates/show.html.twig
+++ b/app/Resources/views/delegates/show.html.twig
@@ -2,11 +2,18 @@
 
 {% block body %}
     <h3 class="page-header">Registration Details</h3>
-
+    {% if app.session.flashBag.has('success') %}
+        <div class="alert alert-success">
+            <i class="fa fa-check-square-o"></i>
+            {% for msg in app.session.flashBag.get('success') %}
+                {{ msg }}
+            {% endfor %}
+        </div>
+    {% endif %}
     <table class="table table-striped">
         <tbody>
             <tr>
-                <th>Id</th>
+                <th  width="15%">Id</th>
                 <td>{{ delegate.id }}</td>
             </tr>
             <tr>
@@ -38,17 +45,17 @@
     <table>
         <tr>
             <td>
-                <a href="{{ path('delegates_edit', { 'id': delegate.id }) }}" class="btn btn-sm btn-primary">Edit</a>
+                <a href="{{ path('delegates_edit', { 'id': delegate.id }) }}" class="btn btn-md btn-primary">Edit</a>
             </td>
             <td>&nbsp;</td>
             <td>
                 {{ form_start(delete_form) }}
-                <input type="submit" value="Delete" class="btn btn-sm btn-danger">
+                <input type="submit" value="Delete" onclick="return confirm('Do you really want to delete this entry?')" class="btn btn-md btn-danger">
                 {{ form_end(delete_form) }}
             </td>
             <td>&nbsp;</td>
             <td>
-                <a href="{{ path('delegates_index') }}" class="btn btn-sm btn-default"><i class="fa fa-reply fa-fw"></i> Back to the list</a>
+                <a href="{{ path('delegates_index') }} "  class="btn btn-md btn-default"><i class="fa fa-reply fa-fw"></i> Back to the list</a>
             </td>
         </tr>
     </table>
