--- a/app/Resources/views/delegates/new.html.twig
+++ b/app/Resources/views/delegates/new.html.twig
@@ -4,25 +4,43 @@
     <h3 class="page-header">New Registration</h3>
 
     {{ form_start(form) }}
-    <label>Name</label>
-    {{ form_widget(form.name, { 'attr': {'class': 'form-control'} }) }}
-    <br>
-    <label>Last Name</label>
-    {{ form_widget(form.lastname, { 'attr': {'class': 'form-control'} }) }}
-    <br>
-    <label>Gender</label>
-    {{ form_widget(form.gender, { 'attr': {'class': 'form-control'} }) }}
-    <br>
-    <label>Phone Number</label>
-    {{ form_widget(form.phone, { 'attr': {'class': 'form-control'} }) }}
-    <br>
-    <label>Church Address</label>
-    {{ form_widget(form.church, { 'attr': {'class': 'form-control'} }) }}
-    <br>
-    <label>District</label>
-    {{ form_widget(form.district, { 'attr': {'class': 'form-control'} }) }}
-    <br>
-    <input type="submit" value="Create" class="btn btn-sm btn-success" />  <a href="{{ path('delegates_index') }}" class="btn btn-sm btn-default"><i class="fa fa-reply fa-fw"></i> Back to the list</a>
+    <table class="table table-striped">
+        <tr>
+            <td>
+                <label>Name</label>
+                {{ form_widget(form.name, { 'attr': {'class': 'form-control'} }) }}</td>
+            <td>
+                <label>Last Name</label>
+                {{ form_widget(form.lastname, { 'attr': {'class': 'form-control'} }) }}
+            </td>
+            <td width="17%">
+                <label>Gender</label>
+                {{ form_widget(form.gender, { 'attr': {'class': 'form-control'} }) }}
+            </td>
+        </tr>
+    </table>
+    <table class="table table-striped">
+        <tr>
+            <td>
+                <label>Phone Number</label>
+                {{ form_widget(form.phone, { 'attr': {'class': 'form-control'} }) }}
+            </td>
+        </tr>
+    </table>
+    <table class="table table-striped">
+        <tr>
+            <td>
+                <label>Church Address</label>
+                {{ form_widget(form.church, { 'attr': {'class': 'form-control'} }) }}
+            </td>
+            <td>
+                <label>District</label>
+                {{ form_widget(form.district, { 'attr': {'class': 'form-control'} }) }}
+            </td>
+        </tr>
+    </table>
+
+    <input type="submit" value="Create" class="btn btn-md btn-success" />  <a href="{{ path('delegates_index') }}" class="btn btn-md btn-default"><i class="fa fa-reply fa-fw"></i> Back to the list</a>
 
     {{ form_end(form) }}
 {% endblock %}
