--- a/web/css/sb-admin-2.css
+++ b/web/css/sb-admin-2.css
@@ -433,3 +433,7 @@ table.dataTable thead .sorting:after {
     border-left-width: 0;
   }
 }
+
+.page-header{font-size: 22px;font-weight: normal;}
+
+.alert{ font-size: 16px;}
