--- a/app/Resources/views/delegates/index.html.twig
+++ b/app/Resources/views/delegates/index.html.twig
@@ -4,7 +4,7 @@
     <style>
         .container-fluid{position: relative;}
         .loading-overlay{
-            position: absolute;
+            position: fixed;
             left: 0;
             top: 0;
             right: 0;
