--- a/app/Resources/views/delegates/index.html.twig
+++ b/app/Resources/views/delegates/index.html.twig
@@ -5,6 +5,8 @@
         .container-fluid{position: relative;}
         .loading-overlay{
             position: fixed;
+            width:100%;
+            height:100%;
             left: 0;
             top: 0;
             right: 0;
@@ -13,7 +15,7 @@
             background: rgba(255,255,255,0.7);
         }
         .overlay-content {
-            position: absolute;
+            position: fixed;
             transform: translateY(-50%);
             -webkit-transform: translateY(-50%);
             -ms-transform: translateY(-50%);
