--- a/app/Resources/views/admin.html.twig
+++ b/app/Resources/views/admin.html.twig
@@ -29,7 +29,7 @@
                 <a class="navbar-brand" href="#" style="color:#286090  ;font-size:22px; font-family:'Montserrat', sans-serif; "><table><tr><td><img src="{{ asset('images/epcs.jpg') }}" width="30" alt="EPCS"> </td><td>&nbsp; 23rd Annual Youth Convention 2017 <span style="font-family: 'Great Vibes', cursive; color:#28609D;">&nbsp;&nbsp;&nbsp;&nbsp; I will give you a new heart - Ezekiel 36:26</span></td></tr></table></a>
                 {% endif %}
                 {% if is_granted('ROLE_MEMBERS') %}
-                    <a class="navbar-brand" href="#" style="color:#286090  ;font-size:22px; font-family:'Montserrat', sans-serif; "><table><tr><td><img src="{{ asset('images/epcs.jpg') }}" width="30" alt="EPCS"> </td><td>&nbsp; 23rd Annual NE Convention</td></tr></table></a>
+                    <a class="navbar-brand" href="#" style="color:#286090  ;font-size:22px; font-family:'Montserrat', sans-serif; "><table><tr><td><img src="{{ asset('images/epcs.jpg') }}" width="30" alt="EPCS"> </td><td>&nbsp; Nehemiah Rumtek</td></tr></table></a>
                 {% endif %}
             </div>
             <!-- /.navbar-header -->
