--- a/app/Resources/views/register/data.html.twig
+++ b/app/Resources/views/register/data.html.twig
@@ -47,11 +47,11 @@
         <tr>
             <th>Id</th>
             <th>Name</th>
-            <th>Last Name</th>
+            <th>Email</th>
             <th>Phone No.</th>
             <th>Gender</th>
             <th>Address</th>
-            <th>Church</th>
+            <th>Posting</th>
         </tr>
         </thead>
         <tbody>
