--- a/app/Resources/views/register/edit.html.twig
+++ b/app/Resources/views/register/edit.html.twig
@@ -7,7 +7,7 @@
     <label>Name</label>
     {{ form_widget(edit_form.name, { 'attr': {'class': 'form-control'} }) }}
         <br>
-    <label>Last Name</label>
+    <label>Email</label>
     {{ form_widget(edit_form.email, { 'attr': {'class': 'form-control'} }) }}
         <br>
     <label>Phone</label>
@@ -19,7 +19,7 @@
     <label>Address</label>
     {{ form_widget(edit_form.address, { 'attr': {'class': 'form-control'} }) }}
         <br>
-    <label>Church</label>
+    <label>Posting</label>
     {{ form_widget(edit_form.church, { 'attr': {'class': 'form-control'} }) }}
         <br>
     <input type="submit" value="Edit" class="btn btn-sm btn-success"/>
