--- a/app/Resources/views/register/filter.html.twig
+++ b/app/Resources/views/register/filter.html.twig
@@ -7,7 +7,7 @@
         <th>Phn</th>
         <th>Gender</th>
         <th>Address</th>
-        <th>District</th>
+        <th>Posting</th>
         <th>Actions</th>
     </tr>
     </thead>
