--- a/app/Resources/views/register/show.html.twig
+++ b/app/Resources/views/register/show.html.twig
@@ -30,7 +30,7 @@
                 <td>{{ register.address }}</td>
             </tr>
             <tr>
-                <th>Church</th>
+                <th>Posting</th>
                 <td>{{ register.church }}</td>
             </tr>
         </tbody>
