--- a/app/Resources/views/register/index.html.twig
+++ b/app/Resources/views/register/index.html.twig
@@ -48,11 +48,11 @@
             <tr>
                 <th>Id</th>
                 <th>Name</th>
-                <th>Last Name</th>
+                <th>Email</th>
                 <th>Phone No.</th>
                 <th>Gender</th>
                 <th>Address</th>
-                <th>Church</th>
+                <th>Posting</th>
                 <th>Actions</th>
             </tr>
         </thead>
