--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,63 +1,88 @@
 @import url(../css/reset.css);
+/* line 7, ../sass/style.scss */
 html, body {
   height: 100%;
-  font-size: 16px; }
+  font-size: 16px;
+}
 
+/* line 12, ../sass/style.scss */
 body {
-  color: #111; }
+  color: #111;
+}
 
+/* line 16, ../sass/style.scss */
 h1 {
-  font-size: 1.500em; }
+  font-size: 1.500em;
+}
 
+/* line 20, ../sass/style.scss */
 #screen1 {
   background: url(../images/background-img.jpg) #213159;
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: cover; }
+  background-size: cover;
+}
 
+/* line 27, ../sass/style.scss */
 a:link {
-  text-decoration: none; }
+  text-decoration: none;
+}
 
+/* line 29, ../sass/style.scss */
 header {
   height: 70px;
-  background: #213159; }
+  background: #213159;
+}
 
+/* line 35, ../sass/style.scss */
 .mid-box {
-  padding-top: 10%; }
-  .mid-box h1 {
-    font-family: "Playfair Display", serif;
-    font-weight: 700;
-    font-size: 3em;
-    line-height: 50px;
-    margin-top: 10px; }
-  .mid-box em {
-    font-family: "Playfair Display", serif;
-    font-weight: 700;
-    font-style: italic;
-    font-size: 1.475em;
-    line-height: 50px; }
-  .mid-box h2 {
-    font-family: "Montserrat", sans-serif;
-    font-weight: normal;
-    font-size: 2.250em;
-    line-height: 40px; }
-  .mid-box span {
-    display: block;
-    margin-bottom: 15px;
-    font-size: 0.9em;
-    line-height: 30px;
-    letter-spacing: normal !important;
-    font-family: "Open Sans", sans-serif;
-    text-transform: none !important; }
-  .mid-box .item {
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    color: #f0f0f0;
-    text-transform: uppercase;
-    letter-spacing: 0.1em; }
+  padding-top: 10%;
+}
+/* line 39, ../sass/style.scss */
+.mid-box h1 {
+  font-family: "Playfair Display", serif;
+  font-weight: 700;
+  font-size: 3em;
+  line-height: 50px;
+  margin-top: 10px;
+}
+/* line 47, ../sass/style.scss */
+.mid-box em {
+  font-family: "Playfair Display", serif;
+  font-weight: 700;
+  font-style: italic;
+  font-size: 1.475em;
+  line-height: 50px;
+}
+/* line 55, ../sass/style.scss */
+.mid-box h2 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: normal;
+  font-size: 2.250em;
+  line-height: 40px;
+}
+/* line 62, ../sass/style.scss */
+.mid-box span {
+  display: block;
+  margin-bottom: 15px;
+  font-size: 0.9em;
+  line-height: 30px;
+  letter-spacing: normal !important;
+  font-family: "Open Sans", sans-serif;
+  text-transform: none !important;
+}
+/* line 72, ../sass/style.scss */
+.mid-box .item {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  color: #f0f0f0;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+}
 
+/* line 84, ../sass/style.scss */
 .link-btn {
   display: block;
   border-top: 1px solid #FFF;
@@ -69,64 +94,91 @@ header {
   text-transform: uppercase;
   font-size: 0.9em;
   position: relative;
-  z-index: 99; }
-  .link-btn a {
-    background: #F04B4C;
-    padding: 10px;
-    color: #FFF; }
+  z-index: 99;
+}
+/* line 96, ../sass/style.scss */
+.link-btn a {
+  background: #F04B4C;
+  padding: 10px;
+  color: #FFF;
+}
 
+/* line 103, ../sass/style.scss */
 .slideDown {
   display: none;
   margin-top: 50px;
-  font-family: "Open Sans", sans-serif; }
+  font-family: "Open Sans", sans-serif;
+}
 
+/* line 108, ../sass/style.scss */
 .grabPromo {
-  cursor: pointer; }
+  cursor: pointer;
+}
 
+/* line 110, ../sass/style.scss */
 .sub-link {
-  text-align: center; }
-  .sub-link li {
-    display: inline-block;
-    margin-left: 15px; }
-    .sub-link li a {
-      display: block;
-      color: #FFF;
-      border: 1px solid #f0f0f0;
-      padding: 10px;
-      margin-bottom: 20px; }
+  text-align: center;
+}
+/* line 113, ../sass/style.scss */
+.sub-link li {
+  display: inline-block;
+  margin-left: 15px;
+}
+/* line 117, ../sass/style.scss */
+.sub-link li a {
+  display: block;
+  color: #FFF;
+  border: 1px solid #f0f0f0;
+  padding: 10px;
+  margin-bottom: 20px;
+}
 
+/* line 128, ../sass/style.scss */
 nav {
   position: absolute;
   bottom: 0;
   width: 100%;
   height: 70px;
   background: #213159;
-  font-family: "Open Sans", sans-serif; }
-  nav li {
-    display: inline-block;
-    padding: 24px 10px;
-    font-size: 0.875em; }
-  nav li a {
-    color: #f0f0f0;
-    text-transform: uppercase; }
-  nav li a:hover {
-    color: #FFF; }
-  nav li a:visited {
-    color: #FFF; }
+  font-family: "Open Sans", sans-serif;
+}
+/* line 136, ../sass/style.scss */
+nav li {
+  display: inline-block;
+  padding: 24px 10px;
+  font-size: 0.875em;
+}
+/* line 142, ../sass/style.scss */
+nav li a {
+  color: #f0f0f0;
+  text-transform: uppercase;
+}
+/* line 146, ../sass/style.scss */
+nav li a:hover {
+  color: #FFF;
+}
+/* line 149, ../sass/style.scss */
+nav li a:visited {
+  color: #FFF;
+}
 
+/* line 155, ../sass/style.scss */
 section {
   height: 100vh;
-  font-family: "Open Sans", sans-serif; }
+  font-family: "Open Sans", sans-serif;
+}
 
+/* line 160, ../sass/style.scss */
 #screen2 {
   padding: 60px 0;
   line-height: 24px;
-  font-size: 0.875em; }
+  font-size: 0.875em;
+}
 
+/* line 166, ../sass/style.scss */
 .fixed {
   position: fixed;
   top: 0;
   height: 70px;
-  z-index: 1; }
-
-/*# sourceMappingURL=style.css.map */
+  z-index: 1;
+}
