--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -14,6 +14,7 @@
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 </head>
 <body>
+<div class="login-container ">
 {% block body %}
     {% if app.request.hasPreviousSession %}
         {% for type, messages in app.session.flashbag.all() %}
@@ -30,5 +31,6 @@
         {% endblock fos_user_content %}
     </div>
 {% endblock %}
+</div>
 </body>
 </html>
