--- a/app/Resources/views/delegates/data.html.twig
+++ b/app/Resources/views/delegates/data.html.twig
@@ -25,62 +25,78 @@
     </style>
 {% endblock %}
 {% block body %}
-<div ng-app="fetch"  ng-controller="dbCtrl">
-    <p>&nbsp;</p>
-    <div ng-show="loading" class="loading-overlay">
-        <div class="overlay-content">
-            <img src="{{ asset('images/loading-gear.gif') }}" >
-        </div>
-    </div>
-    <div class="input-group custom-search-form">
-        <input type="text" ng-model="searchFilter" class="form-control" placeholder="Search...">
-        <span class="input-group-btn">
-                                    <button class="btn btn-default" type="button">
+    <!-- PAGE CONTENT WRAPPER -->
+    <div class="page-content-wrap">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <strong>Search Delegates</strong>
+
+                        <div ng-app="fetch"  ng-controller="dbCtrl">
+                            <p>&nbsp;</p>
+                            <div ng-show="loading" class="loading-overlay">
+                                <div class="overlay-content">
+                                    <img src="{{ asset('images/loading-gear.gif') }}" >
+                                </div>
+                            </div>
+                            <div class="input-group custom-search-form">
+                                <input type="text" ng-model="searchFilter" class="form-control" placeholder="Search...">
+                                <span class="input-group-btn">
+                                    <button class="btn btn-sm btn-default" type="button">
                                         <i class="fa fa-search"></i>
                                     </button>
                                 </span>
-    </div>
-    <p>&nbsp;</p>
+                            </div>
 
-    <table class="table table-striped">
-        <thead>
-        <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>Last Name</th>
-            <th>Gender</th>
-            <th>Phone No.</th>
-            <th>Church</th>
-            <th>District</th>
-        </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="delegates in data | filter:searchFilter">
-                <td>{[{ delegates.id }]}</td>
-                <td>{[{ delegates.name }]}</td>
-                <td>{[{ delegates.lastname }]}</td>
-                <td>{[{ delegates.gender }]}</td>
-                <td>{[{ delegates.phone }]}</td>
-                <td>{[{ delegates.church }]}</td>
-                <td>{[{ delegates.district }]}</td>
-                {#{% for register in registers %}#}
-                {#<td width="15%">#}
-                    {#<table>#}
-                        {#<tr>#}
-                            {#<td width="80px">#}
-                                {#<a href="{{ path('member_show', { 'id': register.id }) }}" class="btn btn-sm btn-success"><i class="fa fa-eye"></i> show</a>#}
-                            {#</td>#}
-                            {#<td width="80px">#}
-                                {#<a href="{{ path('member_edit', { 'id': register.id }) }}" class="btn btn-sm btn-primary"><i class="fa fa-edit"></i> edit </a>#}
-                            {#</td>#}
-                        {#</tr>#}
-                    {#</table>#}
-                {#</td>#}
-            {#</tr>#}
-        {#{% endfor %}#}
-        </tbody>
-    </table>
-</div>
+<p></p>
+                            <table class="table table-striped">
+                                <thead>
+                                <tr>
+                                    <th>Id</th>
+                                    <th>Name</th>
+                                    <th>Last Name</th>
+                                    <th>Gender</th>
+                                    <th>Phone No.</th>
+                                    <th>Church</th>
+                                    <th>District</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr ng-repeat="delegates in data | filter:searchFilter">
+                                    <td>{[{ delegates.id }]}</td>
+                                    <td>{[{ delegates.name }]}</td>
+                                    <td>{[{ delegates.lastname }]}</td>
+                                    <td>{[{ delegates.gender }]}</td>
+                                    <td>{[{ delegates.phone }]}</td>
+                                    <td>{[{ delegates.church }]}</td>
+                                    <td>{[{ delegates.district }]}</td>
+                                    {#{% for register in registers %}#}
+                                    {#<td width="15%">#}
+                                    {#<table>#}
+                                    {#<tr>#}
+                                    {#<td width="80px">#}
+                                    {#<a href="{{ path('member_show', { 'id': register.id }) }}" class="btn btn-sm btn-success"><i class="fa fa-eye"></i> show</a>#}
+                                    {#</td>#}
+                                    {#<td width="80px">#}
+                                    {#<a href="{{ path('member_edit', { 'id': register.id }) }}" class="btn btn-sm btn-primary"><i class="fa fa-edit"></i> edit </a>#}
+                                    {#</td>#}
+                                    {#</tr>#}
+                                    {#</table>#}
+                                    {#</td>#}
+                                    {#</tr>#}
+                                    {#{% endfor %}#}
+                                </tbody>
+                            </table>
+                        </div>
+                        {#<a href="{{ path('delegates_index') }}" class="btn btn-md btn-default"><i class="fa fa-reply fa-fw"></i> Back to the list</a>#}
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
     {% endblock %}
 {% block javascripts %}
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.24/angular.min.js"></script>
