--- a/app/Resources/views/delegates/edit.html.twig
+++ b/app/Resources/views/delegates/edit.html.twig
@@ -63,7 +63,7 @@
                             </tr>
                         </table>
 
-                        <input type="submit" value="Edit" class="btn btn-md btn-success"/>
+                        <input type="submit" value="Update" class="btn btn-sm btn-success"/>
                     </div>
                 </div>
             </div>
@@ -72,20 +72,20 @@
 
     </div>
     {{ form_end(edit_form) }}
-    <p>&nbsp;</p>
-<div class="row">
-    <div class="col-md-12">
-        <div class="panel panel-default">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel panel-default">
 
-            <div class="panel-body">
-    <table>
-        <tr>
-            <td>
-                {{ form_start(delete_form) }}
-                <input type="submit" value="Delete" onclick="return confirm('Do you really want to delete this entry?')" class="btn btn-md btn-danger"> <a href="{{ path('delegates_index') }}" class="btn btn-md btn-default"><i class="fa fa-reply fa-fw"></i> Back to the list</a>
-                {{ form_end(delete_form) }}
-            </td>
-        </tr>
-    </table>
-                </div></div></div></div>
+                <div class="panel-body">
+                    {{ form_start(delete_form) }}
+                    <input type="submit" value="Delete"
+                           onclick="return confirm('Do you really want to delete this entry?')"
+                           class="btn btn-sm btn-danger"> <a href="{{ path('delegates_index') }}"
+                                                             class="btn btn-sm btn-default"><i
+                                class="fa fa-reply fa-fw"></i> Back to the list</a>
+                    {{ form_end(delete_form) }}
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
