--- a/app/Resources/views/admin.html.twig
+++ b/app/Resources/views/admin.html.twig
@@ -34,7 +34,7 @@
                         <img src="{{ asset('images/11.png') }}" alt="EPCS"/>
                     </div>
                     <div class="profile-data">
-                        <div class="profile-data-title">24th Annual Convention 2017</div>
+                        {#<div class="profile-data-title">24th Annual Convention 2017</div>#}
                     </div>
                 </div>
             </li>
